--- a/04kensington/index.html
+++ b/04kensington/index.html
@@ -21,41 +21,94 @@
 </head>
 <body>
     <header id="main_header">
-        <div id="header_top">
-            <h1 class="logo">
-                <a href="#">LOGO</a>
-            </h1>
-            <nav class="gnb">
-                <ul class="submenu clearfix">
-                    <li><a href="subpage01.html">지점소개</a></li>
-                    <li><a href="subpage02.html">프로모션</a></li>
-                    <li><a href="subpage03.html">멤버십</a></li>
-                    <li><a href="subpage04.html">켄싱턴프렌즈</a></li>
-                    <li><a href="subpage05.html">켄싱턴매거진</a></li>
-                    <li><a href="subpage06.html">고객지원</a></li>
-                </ul>
-                <div class="language clearfix">
-                    <div class="kor"><a href="#">KOR</a></div>
-                    <div class="eng"><a href="#">ENG</a></div>
+        <div class="headerWrap">
+            <div id="header_top">
+                <h1 class="logo">
+                    <a href="index.html">LOGO</a>
+                </h1>
+                <nav class="gnb">
+                    <ul class="submenu clearfix">
+                        <li>
+                            <a href="subpage01.html">지점소개</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage01.html">리스트 보기</a></li>
+                                    <li><a href="subpage01.html">글로벌 지도 보기</a></li>
+                                    <li><a href="subpage01.html">국내여행 지도 보기</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="subpage02.html">프로모션</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage02.html">테마기획전</a></li>
+                                    <li><a href="subpage02.html">패키지</a></li>
+                                    <li><a href="subpage02.html">이벤트</a></li>
+                                    <li><a href="subpage02.html">지점소식</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="subpage03.html">멤버십</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage03.html">켄싱턴 리워즈</a></li>
+                                    <li><a href="subpage03.html">호텔 E멤버십</a></li>
+                                    <li><a href="subpage03.html">리조트 멤버십</a></li>
+                                    <li><a href="subpage03.html">기프트 바우처</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="subpage04.html">켄싱턴프렌즈</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage04.html">KENNY MALL</a></li>
+                                    <li><a href="subpage04.html">ARTRO</a></li>
+                                    <li><a href="subpage04.html">이랜드크루즈</a></li>
+                                    <li><a href="subpage04.html">베어스타운</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="subpage05.html">켄싱턴매거진</a>
+                        </li>
+                        <li>
+                            <a href="subpage06.html">고객지원</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage06.html">공지사항</a></li>
+                                    <li><a href="subpage06.html">자주하는 질문</a></li>
+                                    <li><a href="subpage06.html">1:1 문의</a></li>
+                                    <li><a href="subpage06.html">이용문의</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="language clearfix">
+                        <div class="kor"><a href="javascript:void(0)">KOR</a></div>
+                        <div class="eng"><a href="javascript:void(0)">ENG</a></div>
+                    </div>
+                    <ul class="submenu_b clearfix">
+                        <li><a href="javascript:void(0)">회사소개</a></li>
+                        <li><a href="javascript:void(0)">이용약관</a></li>
+                        <li><a href="javascript:void(0)">예약문의</a></li>
+                    </ul>
+                    <div class="sns_wrap clearfix">
+                        <a href="https://www.youtube.com/channel/UCGWi1TIZZlcxPvxoSfrPc4Q?view_as=subscriber" class="btn_sns ft_youtube">youtube</a>
+                        <a href="https://goo.gl/gr3Qzw" class="btn_sns ft_post">post</a>
+                        <a href="http://blog.naver.com/e_leisurvice" class="btn_sns ft_blog">blog</a>
+                        <a href="http://pf.kakao.com/_Hgxmjxd" class="btn_sns ft_kakao">kakao</a>
+                        <a href="https://instagram.com/kensingtonhotel_official/" class="btn_sns ft_instagram">instagram</a>
+                        <a href="https://www.facebook.com/kensingtonhnr" class="btn_sns ft_facebook">facebook</a>
+                    </div>
+                </nav>
+                <div class="toggle">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
                 </div>
-                <ul class="submenu_b clearfix">
-                    <li><a href="#">회사소개</a></li>
-                    <li><a href="#">이용약관</a></li>
-                    <li><a href="#">예약문의</a></li>
-                </ul>
-                <div class="sns_wrap clearfix">
-                    <a href="https://www.youtube.com/channel/UCGWi1TIZZlcxPvxoSfrPc4Q?view_as=subscriber" class="btn_sns ft_youtube">youtube</a>
-                    <a href="https://goo.gl/gr3Qzw" class="btn_sns ft_post">post</a>
-                    <a href="http://blog.naver.com/e_leisurvice" class="btn_sns ft_blog">blog</a>
-                    <a href="http://pf.kakao.com/_Hgxmjxd" class="btn_sns ft_kakao">kakao</a>
-                    <a href="https://instagram.com/kensingtonhotel_official/" class="btn_sns ft_instagram">instagram</a>
-                    <a href="https://www.facebook.com/kensingtonhnr" class="btn_sns ft_facebook">facebook</a>
-                </div>
-            </nav>
-            <div class="toggle">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
             </div>
         </div>
         <div class="sliderWrap">
@@ -133,13 +186,13 @@
                     </form>
                     <div class="dining">
                         <p>새로워진 온라인 예약으로 빠르고 간편하게 예약 및 조회해보세요.</p>
-                        <div class="dining_right clearfix"><a href="#">
+                        <div class="dining_right clearfix"><a href="javascript:void(0)">
                             <p>다이닝 예약 바로가기</p>
                             <img src="images/dining_go.png" alt="">
                         </a></div>
                     </div>
                 </li>
-                <li><a href="#">
+                <li><a href="subpage02.html">
                     <div class="con1wrap con1_pack">
                         <img src="images/con_benefit.png" alt="">
                         <h4>Package<br><span>Benefits</span></h4>
@@ -162,7 +215,7 @@
                                         </div>
                                     </div>
                                     <div class="slider02_right">
-                                        <a href="#"><img src="images/conslider1_01.jpg" alt=""></a>
+                                        <a href="subpage02.html"><img src="images/conslider1_01.jpg" alt=""></a>
                                     </div>
                                 </div>
                             </li>
@@ -175,7 +228,7 @@
                                         </div>
                                     </div>
                                     <div class="slider02_right">
-                                        <a href="#"><img src="images/conslider1_02.jpg" alt=""></a>
+                                        <a href="subpage02.html"><img src="images/conslider1_02.jpg" alt=""></a>
                                     </div>
                                 </div>
                             </li>
@@ -188,7 +241,7 @@
                                         </div>
                                     </div>
                                     <div class="slider02_right">
-                                        <a href="#"><img src="images/conslider1_03.png" alt=""></a>
+                                        <a href="subpage02.html"><img src="images/conslider1_03.png" alt=""></a>
                                     </div>
                                 </div>
                             </li>
@@ -201,7 +254,7 @@
                                         </div>
                                     </div>
                                     <div class="slider02_right">
-                                        <a href="#"><img src="images/conslider1_04.jpg" alt=""></a>
+                                        <a href="subpage02.html"><img src="images/conslider1_04.jpg" alt=""></a>
                                     </div>
                                 </div>
                             </li>
@@ -214,7 +267,7 @@
                                         </div>
                                     </div>
                                     <div class="slider02_right">
-                                        <a href="#"><img src="images/conslider1_05.jpg" alt=""></a>
+                                        <a href="subpage02.html"><img src="images/conslider1_05.jpg" alt=""></a>
                                     </div>
                                 </div>
                             </li>
@@ -227,7 +280,7 @@
                                         </div>
                                     </div>
                                     <div class="slider02_right">
-                                        <a href="#"><img src="images/conslider1_06.jpg" alt=""></a>
+                                        <a href="subpage02.html"><img src="images/conslider1_06.jpg" alt=""></a>
                                     </div>
                                 </li>
                         </ul>
@@ -240,7 +293,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="mo_promo"><div class="con1wrap">
+                    <a href="subpage02.html" class="mo_promo"><div class="con1wrap">
                         <img src="images/mo_con_promotion01.png" alt="">
                         <h4>Promotion</h4>
                     </div></a>
@@ -251,29 +304,31 @@
                             <h4>ELAND CRUISE</h4>
                             <p class="mb49">문화와 관광이 어우러진<br>도심속 복합 테마파크</p>
                         </div>
-                        <div class="card_btn"><a href="#">자세히 보기</a></div>
+                        <div class="card_btn"><a href="subpage04.html">자세히 보기</a></div>
                     </div>
                 </li>
                 <li>
                     <div class="con1_6">
-                        <img src="images/mo_con_location01.png" alt="" class="mo_location">
-                        <div class="con1_card">
-                            <div class="card_txt">
-                                <h4 class="con_loca">지점</h4>
-                                <p>켄싱턴 호텔의 지점들을 한눈에</p>
+                        <a href="subpage01.html">
+                            <img src="images/mo_con_location01.png" alt="" class="mo_location">
+                            <div class="con1_card">
+                                <div class="card_txt">
+                                    <h4 class="con_loca">지점</h4>
+                                    <p>켄싱턴 호텔의 지점들을 한눈에</p>
+                                </div>
+                                <div class="card_btn"><a href="subpage01.html">자세히 보기</a></div>
                             </div>
-                            <div class="card_btn"><a href="subpage01.html">자세히 보기</a></div>
-                        </div>
-                        <img src="images/con_location.png" alt="" class="card_location">
+                            <img src="images/con_location.png" alt="" class="card_location">
+                        </a>
                     </div>
                 </li>
-                <li><a href="#">
+                <li><a href="subpage03.html">
                     <div class="con1wrap">
                         <img src="images/con_membership.png" alt="">
                         <h4>Membership</h4>
                     </div>
                 </a></li>
-                <li><a href="#">
+                <li><a href="subpage06.html">
                     <div class="con1wrap">
                         <img src="images/con_news.png" alt="">
                         <h4><span>Latest</span><br>News</h4>
@@ -285,7 +340,7 @@
                             <h4>BEARS TOWN</h4>
                             <p>사계절 즐거움이 가득한 곳</p>
                         </div>
-                        <div class="card_btn"><a href="#">자세히 보기</a></div>
+                        <div class="card_btn"><a href="subpage04.html">자세히 보기</a></div>
                     </div>
                 </li>
             </ul>
@@ -332,7 +387,7 @@
         </div>
         <div class="sec02 clearfix">
             <div class="sec02_txt">
-                <h2><a href="#">artro logo</a></h2>
+                <h2><a href="subpage04.html">artro logo</a></h2>
                 <p>문화 그 이상의 갤러리,<br>이랜드 아트로 갤러리</p>
                 <div class="sec02_btn clearfix">
                     <div class="swiper-button-next"></div>
@@ -489,57 +544,59 @@
             <div class="sec03_left">
                 <div class="sec03_txt">
                     <h2>kenny_logo</h2>
-                    <div class="card_btn"><a href="#">자세히 보기</a></div>
+                    <div class="card_btn"><a href="subpage04.html">자세히 보기</a></div>
                 </div>
             </div>
             <div class="sec03_right">
                 <div class="sec03_txt">
                     <h2>kenny_logo</h2>
-                    <div class="card_btn"><a href="#">자세히 보기</a></div>
+                    <div class="card_btn"><a href="subpage05.html">자세히 보기</a></div>
                 </div>
             </div>
         </div>
         <div class="sec04">
             <div class="sec04_b1">
-                <h2><a href="#">CRUISE_logo</a></h2>
+                <h2><a href="subpage04.html">CRUISE_logo</a></h2>
             </div>
             <div class="magazine">
                 <h4>켄싱턴 매거진</h4>
-                <a href="#" class="mag_plus">more</a>
+                <a href="subpage05.html" class="mag_plus">more</a>
                 <div class="mag">
-                    <div class="kenny09 clearfix">
-                        <img src="images/mo_mag01.png" alt="">
-                        <div class="kenny_txt">
-                            <h4>Hi Kenny 09</h4>
-                            <p>취향 저격<br>케니몰 MD의 여름템</p>
+                    <a href="subpage05.html">
+                        <div class="kenny09 clearfix">
+                            <img src="images/mo_mag01.png" alt="">
+                            <div class="kenny_txt">
+                                <h4>Hi Kenny 09</h4>
+                                <p>취향 저격<br>케니몰 MD의 여름템</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="kenny08 clearfix">
-                        <img src="images/mo_mag02.png" alt="">
-                        <div class="kenny_txt">
-                            <h4>Hi Kenny 08</h4>
-                            <p>스위스 전통의상<br>레더호젠 이야기</p>
+                        <div class="kenny08 clearfix">
+                            <img src="images/mo_mag02.png" alt="">
+                            <div class="kenny_txt">
+                                <h4>Hi Kenny 08</h4>
+                                <p>스위스 전통의상<br>레더호젠 이야기</p>
                         </div>
+                    </a>
                     </div>
                 </div>
             </div>
             <div class="sec04_b2">
-                <h2><a href="#">bears_logo</a></h2>
+                <h2><a href="subpage04.html">bears_logo</a></h2>
             </div>
         </div>
     </section>
     <footer id="footer">
         <div class="footerWrap clearfix">
             <div class="foot_left clearfix">
-                <h2><a href="#">footer_logo</a></h2>
+                <h2><a href="index.html">footer_logo</a></h2>
                 <div class="ft_address">
                     <ul class="ft_up clearfix">
-                        <li><a href="#">회사소개</a></li>
-                        <li><a href="#">개인정보처리방침</a></li>
-                        <li><a href="#">이용약관</a></li>
-                        <li><a href="#">고객센터</a></li>
-                        <li><a href="#">예약문의</a></li>
-                        <li><a href="#">사이트맵</a></li>
+                        <li><a href="javascript:void(0)">회사소개</a></li>
+                        <li><a href="javascript:void(0)">개인정보처리방침</a></li>
+                        <li><a href="javascript:void(0)">이용약관</a></li>
+                        <li><a href="javascript:void(0)">고객센터</a></li>
+                        <li><a href="javascript:void(0)">예약문의</a></li>
+                        <li><a href="javascript:void(0)">사이트맵</a></li>
                     </ul>
                     <ul class="ft_md01 clearfix">
                         <li>(주) 이랜드파크</li>
