--- a/04kensington/subpage06.html
+++ b/04kensington/subpage06.html
@@ -21,41 +21,94 @@
 </head>
 <body class="sub sub06">
     <header id="main_header">
-        <div id="header_top">
-            <h1 class="logo">
-                <a href="index.html">LOGO</a>
-            </h1>
-            <nav class="gnb">
-                <ul class="submenu clearfix">
-                    <li><a href="subpage01.html">지점소개</a></li>
-                    <li><a href="subpage02.html">프로모션</a></li>
-                    <li><a href="subpage03.html">멤버십</a></li>
-                    <li><a href="subpage04.html">켄싱턴프렌즈</a></li>
-                    <li><a href="subpage05.html">켄싱턴매거진</a></li>
-                    <li><a href="subpage06.html">고객지원</a></li>
-                </ul>
-                <div class="language clearfix">
-                    <div class="kor"><a href="#">KOR</a></div>
-                    <div class="eng"><a href="#">ENG</a></div>
+        <div class="headerWrap">
+            <div id="header_top">
+                <h1 class="logo">
+                    <a href="index.html">LOGO</a>
+                </h1>
+                <nav class="gnb">
+                    <ul class="submenu clearfix">
+                        <li>
+                            <a href="subpage01.html">지점소개</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage01.html">리스트 보기</a></li>
+                                    <li><a href="subpage01.html">글로벌 지도 보기</a></li>
+                                    <li><a href="subpage01.html">국내여행 지도 보기</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="subpage02.html">프로모션</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage02.html">테마기획전</a></li>
+                                    <li><a href="subpage02.html">패키지</a></li>
+                                    <li><a href="subpage02.html">이벤트</a></li>
+                                    <li><a href="subpage02.html">지점소식</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="subpage03.html">멤버십</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage03.html">켄싱턴 리워즈</a></li>
+                                    <li><a href="subpage03.html">호텔 E멤버십</a></li>
+                                    <li><a href="subpage03.html">리조트 멤버십</a></li>
+                                    <li><a href="subpage03.html">기프트 바우처</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="subpage04.html">켄싱턴프렌즈</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage04.html">KENNY MALL</a></li>
+                                    <li><a href="subpage04.html">ARTRO</a></li>
+                                    <li><a href="subpage04.html">이랜드크루즈</a></li>
+                                    <li><a href="subpage04.html">베어스타운</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="subpage05.html">켄싱턴매거진</a>
+                        </li>
+                        <li>
+                            <a href="subpage06.html">고객지원</a>
+                            <div class="gnbWrap">
+                                <ul class="depth2 clearfix">
+                                    <li><a href="subpage06.html">공지사항</a></li>
+                                    <li><a href="subpage06.html">자주하는 질문</a></li>
+                                    <li><a href="subpage06.html">1:1 문의</a></li>
+                                    <li><a href="subpage06.html">이용문의</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="language clearfix">
+                        <div class="kor"><a href="#">KOR</a></div>
+                        <div class="eng"><a href="#">ENG</a></div>
+                    </div>
+                    <ul class="submenu_b clearfix">
+                        <li><a href="#">회사소개</a></li>
+                        <li><a href="#">이용약관</a></li>
+                        <li><a href="#">예약문의</a></li>
+                    </ul>
+                    <div class="sns_wrap clearfix">
+                        <a href="https://www.youtube.com/channel/UCGWi1TIZZlcxPvxoSfrPc4Q?view_as=subscriber" class="btn_sns ft_youtube">youtube</a>
+                        <a href="https://goo.gl/gr3Qzw" class="btn_sns ft_post">post</a>
+                        <a href="http://blog.naver.com/e_leisurvice" class="btn_sns ft_blog">blog</a>
+                        <a href="http://pf.kakao.com/_Hgxmjxd" class="btn_sns ft_kakao">kakao</a>
+                        <a href="https://instagram.com/kensingtonhotel_official/" class="btn_sns ft_instagram">instagram</a>
+                        <a href="https://www.facebook.com/kensingtonhnr" class="btn_sns ft_facebook">facebook</a>
+                    </div>
+                </nav>
+                <div class="toggle">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
                 </div>
-                <ul class="submenu_b clearfix">
-                    <li><a href="#">회사소개</a></li>
-                    <li><a href="#">이용약관</a></li>
-                    <li><a href="#">예약문의</a></li>
-                </ul>
-                <div class="sns_wrap clearfix">
-                    <a href="https://www.youtube.com/channel/UCGWi1TIZZlcxPvxoSfrPc4Q?view_as=subscriber" class="btn_sns ft_youtube">youtube</a>
-                    <a href="https://goo.gl/gr3Qzw" class="btn_sns ft_post">post</a>
-                    <a href="http://blog.naver.com/e_leisurvice" class="btn_sns ft_blog">blog</a>
-                    <a href="http://pf.kakao.com/_Hgxmjxd" class="btn_sns ft_kakao">kakao</a>
-                    <a href="https://instagram.com/kensingtonhotel_official/" class="btn_sns ft_instagram">instagram</a>
-                    <a href="https://www.facebook.com/kensingtonhnr" class="btn_sns ft_facebook">facebook</a>
-                </div>
-            </nav>
-            <div class="toggle">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
             </div>
         </div>
         <div class="header_txt">
@@ -71,6 +124,7 @@
             </ul>
         </div>
     </header>
+</div>
     <section>
         <div class="contentWrap">
             <div class="conTop">
