--- a/04kensington/index.html
+++ b/04kensington/index.html
@@ -22,7 +22,7 @@
 <body>
     <header id="main_header">
         <div class="headerWrap">
-            <div id="header_top" class="header_top">
+            <div id="header_top">
                 <h1 class="logo">
                     <a href="index.html">LOGO</a>
                 </h1>
