--- a/05parallax/index.html
+++ b/05parallax/index.html
@@ -61,7 +61,7 @@
             layer.forEach(function(item,index){
                 // data-speed / scroll / style.transform
 
-                let speed = item.dataset.speed;
+                let speed = item.dataset.speed; // div.layer data-speed값
 
                 // item = document.querySelectorAll(".layer")[0]~[8]
 
