--- a/05parallax/index.html
+++ b/05parallax/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>parallax</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
-        body{height: 400vh;background: #210002;}
         .header{
             height: 100vh;position: relative;overflow: hidden;
             background: #FFAF1B;
@@ -29,11 +29,15 @@
         .p6{background-image: url(images/parallax6.png);}
         .p7{background-image: url(images/parallax7.png);}
         .p8{background-image: url(images/parallax8.png);}
-
-        .container{width: 1200px;margin: 0 auto; background: #fff;}
     </style>
 </head>
 <body>
+    <ul class="nav clearfix">
+        <li id="logo"><a href="javascript:void(0)">CAMPO SANTO</a></li>
+        <li id="review"><a href="javascript:void(0)">QUARTERLY REVIEW</a></li>
+        <li id="blog"><a href="javascript:void(0)">DEVELOPMENT BLOG</a></li>
+        <li id="game"><a href="javascript:void(0)">FIREWATCH</a></li>
+    </ul>
     <div class="header">
         <div class="layer p0" data-speed="4"></div>
         <div class="layer p1" data-speed="5"></div>
@@ -47,7 +51,46 @@
     </div>
 
     <div class="container">
-        1111
+        <div class="sec01">
+            <div class="con_txt">
+                <h2>AVAILABLE NOW FOR <span>$19.99</span></h2>
+            </div>
+            <div class="con_link">
+                <ul class="link_left">
+                    <li class="link">
+                        <a href="javascript:void(0)">
+                            <img src="images/buyicon_pc.png" alt="">
+                            <h4>WINDOWS MAC LINUX</h4>
+                        </a>
+                    </li>
+                    <li class="link">
+                        <a href="javascript:void(0)">
+                            <img src="images/buyicon_xbone.png" alt="">
+                            <h4>PLAYSTATION 4</h4>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="link_right">
+                    <li class="link">
+                        <a href="javascript:void(0)">
+                            <img src="images/buyicon_switch.png" alt="">
+                            <h4>NINTENDO SWITCH</h4>
+                        </a>
+                    </li>
+                    <li class="link">
+                        <a href="javascript:void(0)">
+                            <img src="images/buyicon_xbone.png" alt="">
+                            <h4>XBOX ONE</h4>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="sec02">
+            <div class="con_youtube">
+                <iframe width="900" height="504.89" src="https://www.youtube.com/embed/cXWlgP5hZzc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
     </div>
 
     <script>
