--- a/06parallax_2/index.html
+++ b/06parallax_2/index.html
@@ -10,7 +10,7 @@
         body{height: 400vh;background: #060208;}
         .header{
             height: 1500px;position: relative;overflow: hidden;
-            background: #FF8197;
+            background: #FF8197;margin-bottom: 20px;
         }
         .layer{
             width: 100%;height: 100%;
@@ -39,7 +39,7 @@
         <div class="layer p5" data-speed="40"></div>
     </div>
     <div class="container">
-        아아아아아아아아
+        <h2>갸아아아아아아아아아ㅏ</h2>
     </div>
 
     <script>
