--- a/05parallax/index.html
+++ b/05parallax/index.html
@@ -91,6 +91,36 @@
                 <iframe width="900" height="504.89" src="https://www.youtube.com/embed/cXWlgP5hZzc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
+        <div class="sec03">
+            <h4>
+                Firewatch is a mystery set in the Wyoming<br> wilderness, where your only emotional lifeline is<br> the person on the other end of a handheld<br> radio.
+            </h4>
+            <div class="sec03_txt">
+                <p class="sec03_txt_left">
+                    The year is 1989.<br><br>
+                    You are a man named Henry who has retreated from your messy life to work as a fire lookout in the Wyoming wilderness. Perched atop a mountain, it's your job to find smoke and keep the wilderness safe.
+                    <br><br>
+                    An especially hot, dry summer has everyone on edge. Your supervisor, a woman named Delilah, is available to you
+                </p>
+                <p>
+                    at all times over a small, handheld radio—and is your only contact with the world you've left behind.
+                    <br><br>
+                    But when something strange draws you out of your lookout tower and into the world below, you'll explore a wild and unknown environment, facing questions and making interpersonal choices that can build or destroy the only meaningful relationship you have.
+                </p>
+            </div>
+        </div>
+        <div class="sec04">
+            <div class="sec04_link">
+                <h5>
+                    <a href="javascript:void(0)">SCREENS & TRAILERS</a>
+                </h5>
+            </div>
+            <div class="sec04_link">
+                <h5>
+                    <a href="javascript:void(0)">FIREWATCH FAQ</a>
+                </h5>
+            </div>
+        </div>
     </div>
 
     <script>
