--- a/04kensington/subpage05.html
+++ b/04kensington/subpage05.html
@@ -128,7 +128,7 @@
                 <div class="conTitle on">켄싱턴매거진</div>
             </div>
             <div class="conBottom">
-                <img src="images/sub05_content.png" alt="" class="on">
+                <img src="images/sub05.png" alt="" class="on">
             </div>
         </div>
     </section>
