--- a/04kensington/subpage01.html
+++ b/04kensington/subpage01.html
@@ -148,7 +148,7 @@
                 <div class="conTitle">국내여행 지도 보기</div>
             </div>
             <div class="conBottom">
-                <img src="images/sub01_content01.png" alt="" class="on">
+                <img src="images/sub01_01.png" alt="" class="on">
                 <img src="images/sub01_content02.png" alt="">
                 <img src="images/sub01_content03.png" alt="">
             </div>
