--- a/04kensington/subpage03.html
+++ b/04kensington/subpage03.html
@@ -155,10 +155,10 @@
                 <div class="conTitle">기프트 바우처</div>
             </div>
             <div class="conBottom">
-                <img src="images/sub03_content01.png" alt="" class="on">
-                <img src="images/sub03_content02.png" alt="">
-                <img src="images/sub03_content03.png" alt="">
-                <img src="images/sub03_content04.png" alt="">
+                <img src="images/sub03_01.png" alt="" class="on">
+                <img src="images/sub03_02.png" alt="">
+                <img src="images/sub03_03.png" alt="">
+                <img src="images/sub03_04.png" alt="">
             </div>
         </div>
     </section>
