--- a/05parallax/index.html
+++ b/05parallax/index.html
@@ -121,7 +121,57 @@
                 </h5>
             </div>
         </div>
+        <div class="sec05">
+            <ul class="clearfix">
+                <li class="mr50">
+                    <img src="images/sec05_img01.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/sec05_img02.png" alt="">
+                </li>
+                <li class="mr50">
+                    <img src="images/sec05_img03.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/sec05_img04.jpg" alt="">
+                </li>
+            </ul>
+        </div>
+        <div class="sec06">
+            <div class="sec06_txt">
+                <h2>"AS VISUALLY STRIKING<br>
+                    AS ITS UNIQUE PREMISE."
+                </h2>
+                <h4>
+                    ENTERTAINMENT WEEKLY
+                </h4>
+            </div>
+            <ul class="sec06_link">
+                <li class="sectxt">TECH SUPPORT</li>
+                <li><img src="images/sec06_img.png" alt=""></li>
+                <li class="sectxt">STREAMING & LET'S PLAYS</li>
+            </ul>
+        </div>
     </div>
+
+    <footer class="footer">
+        <div class="ft_txt mb50">
+            <h3>
+                日本語に関する情報
+            </h3>
+        </div>
+        <div class="ft_copyright">
+            <p>
+                ©2021 CAMPO SANTO, IN COOPERATION WITH PANIC.<br>
+                FIREWATCH IS A TRADEMARK OF CAMPO SANTO.<br>
+                NINTENDO SWITCH IS A TRADEMARK OF NINTENDO.
+            </p>
+        </div>
+        <ul class="ft_link">
+            <li><a href="javascript:void(0)">campo santo</a></li>
+            <li><a href="javascript:void(0)">panic</a></li>
+        </ul>
+    </footer>
 
     <script>
         let layer = document.querySelectorAll(".layer");
