--- a/05parallax/index.html
+++ b/05parallax/index.html
@@ -168,8 +168,8 @@
             </p>
         </div>
         <ul class="ft_link">
-            <li><a href="javascript:void(0)">campo santo</a></li>
-            <li><a href="javascript:void(0)">panic</a></li>
+            <li class="campo"><a href="javascript:void(0)">campo santo</a></li>
+            <li class="panic"><a href="javascript:void(0)">panic</a></li>
         </ul>
     </footer>
 
