--- a/04kensington/subpage01.html
+++ b/04kensington/subpage01.html
@@ -147,7 +147,12 @@
                 <div class="conTitle">글로벌 지도 보기</div>
                 <div class="conTitle">국내여행 지도 보기</div>
             </div>
-            <div class="conBottom">
+            <div class="conBottom.pc">
+                <img src="images/sub01_content01.png" alt="" class="on">
+                <img src="images/sub01_content02.png" alt="">
+                <img src="images/sub01_content03.png" alt="">
+            </div>
+            <div class="conBottom.mob">
                 <img src="images/sub01_01.png" alt="" class="on">
                 <img src="images/sub01_content02.png" alt="">
                 <img src="images/sub01_content03.png" alt="">
