--- a/04kensington/subpage02.html
+++ b/04kensington/subpage02.html
@@ -155,7 +155,13 @@
                 <div class="conTitle">이벤트</div>
                 <div class="conTitle">지점소식</div>
             </div>
-            <div class="conBottom">
+            <div class="conBottom pc">
+                <img src="images/sub02_content01.png" alt="" class="on">
+                <img src="images/sub02_content02.png" alt="">
+                <img src="images/sub02_content03.png" alt="">
+                <img src="images/sub02_content04.png" alt="">
+            </div>
+            <div class="conBottom mob">
                 <img src="images/sub02_01.png" alt="" class="on">
                 <img src="images/sub02_02.png" alt="">
                 <img src="images/sub02_03.png" alt="">
