--- a/04kensington/subpage03.html
+++ b/04kensington/subpage03.html
@@ -154,7 +154,13 @@
                 <div class="conTitle">리조트 멤버십</div>
                 <div class="conTitle">기프트 바우처</div>
             </div>
-            <div class="conBottom">
+            <div class="conBottom pc">
+                <img src="images/sub03_content01.png" alt="" class="on">
+                <img src="images/sub03_content02.png" alt="">
+                <img src="images/sub03_content03.png" alt="">
+                <img src="images/sub03_content04.png" alt="">
+            </div>
+            <div class="conBottom mob">
                 <img src="images/sub03_01.png" alt="" class="on">
                 <img src="images/sub03_02.png" alt="">
                 <img src="images/sub03_03.png" alt="">
