--- a/04kensington/subpage05.html
+++ b/04kensington/subpage05.html
@@ -127,7 +127,10 @@
                 </ul>
                 <div class="conTitle on">켄싱턴매거진</div>
             </div>
-            <div class="conBottom">
+            <div class="conBottom pc">
+                <img src="images/sub05_content.png" alt="" class="on">
+            </div>
+            <div class="conBottom mob">
                 <img src="images/sub05.png" alt="" class="on">
             </div>
         </div>
