--- a/04kensington/subpage06.html
+++ b/04kensington/subpage06.html
@@ -155,7 +155,13 @@
                 <div class="conTitle">1:1 문의</div>
                 <div class="conTitle">이용문의</div>
             </div>
-            <div class="conBottom">
+            <div class="conBottom pc">
+                <img src="images/sub06_content01.png" alt="" class="on">
+                <img src="images/sub06_content02.png" alt="">
+                <img src="images/sub06_content03.png" alt="">
+                <img src="images/sub06_content04.png" alt="">
+            </div>
+            <div class="conBottom mob">
                 <img src="images/sub06_01.png" alt="" class="on">
                 <img src="images/sub06_02.png" alt="">
                 <img src="images/sub06_03.png" alt="">
