--- a/04kensington/subpage04.html
+++ b/04kensington/subpage04.html
@@ -154,7 +154,13 @@
                 <div class="conTitle">이랜드크루즈</div>
                 <div class="conTitle">베어스타운</div>
             </div>
-            <div class="conBottom">
+            <div class="conBottom pc">
+                <img src="images/sub04_content01.png" alt="" class="on">
+                <img src="images/sub04_content02.png" alt="">
+                <img src="images/sub04_content03.png" alt="">
+                <img src="images/sub04_content04.png" alt="">
+            </div>
+            <div class="conBottom mob">
                 <img src="images/sub04_01.png" alt="" class="on">
                 <img src="images/sub04_02.png" alt="">
                 <img src="images/sub04_03.png" alt="">
