--- a/04kensington/index.html
+++ b/04kensington/index.html
@@ -138,8 +138,8 @@
                     </div>
                 </li>
             </ul>
-            <img src="images/slider1 next.png" alt="" class="nextBtn">
-            <img src="images/slider1 prev.png" alt="" class="prevBtn">
+            <img src="images/slider1_next.png" alt="" class="nextBtn">
+            <img src="images/slider1_prev.png" alt="" class="prevBtn">
         </div>
         <div class="content">
             <ul class="clearfix">
