--- a/04kensington/index.html
+++ b/04kensington/index.html
@@ -192,12 +192,14 @@
                         </a></div>
                     </div>
                 </li>
-                <li><a href="subpage02.html" class="img01">
-                    <div class="con1wrap con1_pack">
-                        <img src="images/con_benefit.png" alt="">
-                        <h4>Package<br><span>Benefits</span></h4>
-                    </div>
-                </a></li>
+                <li>
+                    <a href="subpage02.html" class="img01">
+                        <div class="con1wrap con1_pack">
+                            <img src="images/con_benefit.png" alt="">
+                            <h4>Package<br><span>Benefits</span></h4>
+                        </div>
+                    </a>
+                </li>
                 <li>
                     <a href="https://www.youtube.com/embed/CjxkndtrxfQ" class="youtube">
                         <img src="images/modal.png" alt="">
@@ -322,18 +324,22 @@
                         </a>
                     </div>
                 </li>
-                <li><a href="subpage03.html" class="img01">
-                    <div class="con1wrap">
-                        <img src="images/con_membership.png" alt="">
-                        <h4>Membership</h4>
-                    </div>
-                </a></li>
-                <li><a href="subpage06.html" class="img01">
-                    <div class="con1wrap">
-                        <img src="images/con_news.png" alt="">
-                        <h4><span>Latest</span><br>News</h4>
-                    </div>
-                </a></li>
+                <li>
+                    <a href="subpage03.html" class="img01">
+                        <div class="con1wrap">
+                            <img src="images/con_membership.png" alt="">
+                           <h4>Membership</h4>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="subpage06.html" class="img01">
+                        <div class="con1wrap">
+                            <img src="images/con_news.png" alt="">
+                            <h4><span>Latest</span><br>News</h4>
+                        </div>
+                    </a>
+                </li>
                 <li>
                     <div class="con1_card">
                         <div class="card_txt">
