--- a/04kensington/subpage01.html
+++ b/04kensington/subpage01.html
@@ -19,7 +19,7 @@
     <script src="js/jquery.colorbox-min.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 </head>
-<body class="sub">
+<body class="sub location">
     <header id="main_header">
         <div class="headerWrap">
             <div id="header_top">
@@ -147,12 +147,12 @@
                 <div class="conTitle">글로벌 지도 보기</div>
                 <div class="conTitle">국내여행 지도 보기</div>
             </div>
-            <div class="conBottom.pc">
+            <div class="conBottom pc">
                 <img src="images/sub01_content01.png" alt="" class="on">
                 <img src="images/sub01_content02.png" alt="">
                 <img src="images/sub01_content03.png" alt="">
             </div>
-            <div class="conBottom.mob">
+            <div class="conBottom mob">
                 <img src="images/sub01_01.png" alt="" class="on">
                 <img src="images/sub01_content02.png" alt="">
                 <img src="images/sub01_content03.png" alt="">
