--- a/07company/index.html
+++ b/07company/index.html
@@ -4,32 +4,72 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <title>company</title>
+    <style>
+        :root{ /* > 변수로 소스값 지정할수있게 / 샤용방법 var()*/
+            --primary-color1:#4455cc;
+            --primary-color2:#854fee;
+        }
+        .headerWrap .nav-item{
+            font-size: 1.2em;border-bottom: 4px solid transparent;
+            padding: 0 10px;transition: 0.3s;
+        }
+        .headerWrap .nav-item:hover{border-bottom: 4px solid var(--primary-color2);}
+        .headerWrap.fixed-top{box-shadow: 0 0 20px rgba(0,0,0,0.3);transition: 0.3s;}
+
+        .visualWrap{
+            background: url(assets/slider-bg.svg) no-repeat center bottom;
+        }
+
+        @media screen and (max-width:576px){
+            .headerWrap .nav-item,.headerWrap .nav-item:hover{border-bottom: 4px solid transparent;}
+        }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="assets/logo.svg" alt="logo"></a>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">HOME</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">ABOUT</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">SERVICE</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">COMMUNITY</a>
-                </li>
-            </ul>
+    <div class="headerWrap bg-light">
+        <div class="container">
+            <nav class="navbar navbar-expand-md navbar-light bg-light">
+                <a class="navbar-brand" href="#"><img src="assets/logo.svg" alt="logo"></a>
+                <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavId">
+                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">HOME</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">SERVICE</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">COMMUNITY</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </div>
+    <div class="visualWrap">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-md-6 col-lg-4 align-self-center mb-5 mb-md-0">
+                    <!-- = d-flex flex-column justify-content-center align-items-center -->
+                    <h2 class="text-center text-md-left">Lorem ipsum dolor sit.</h2>
+                    <p class="text-center text-md-left">Lorem ipsum dolor sit amet.</p>
+                    <a href="#!" class="btn btn-primary d-block d-md-inline mb-2 mb-md-0">MORE</a>
+                    <a href="#!" class="btn btn-outline-primary d-block d-md-inline">E-MAIL</a>
+                </div>
+                <div class="col-md-6 col-lg-8">
+                    <img src="assets/slider.svg" alt="slider" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
