--- a/07company/index.html
+++ b/07company/index.html
@@ -9,7 +9,11 @@
         :root{ /* > 변수로 소스값 지정할수있게 / 샤용방법 var()*/
             --primary-color1:#4455cc;
             --primary-color2:#854fee;
+            --bg-color1:#efefef;
+            --gradient-color:linear-gradient(90deg,#4455cc,#854fee);
+            --box-shadow:0 0 15px rgba(0,0,0,0.5);
         }
+        .headerWrap{transition: 0.3s;}
         .headerWrap .nav-item{
             font-size: 1.2em;border-bottom: 4px solid transparent;
             padding: 0 10px;transition: 0.3s;
@@ -20,6 +24,16 @@
         .visualWrap{
             background: url(assets/slider-bg.svg) no-repeat center bottom;
         }
+
+        .content{background: var(--bg-color1);}
+        .btn.button-primary{
+            background: var(--gradient-color);
+            box-shadow: var(--box-shadow);
+        }
+
+        .service .card{background:var(--bg-color1);border: 0 none;transition: 0.3s;}
+        .service .card:hover{box-shadow:var(--box-shadow);transform: scale(1.1);}
+        .service .card img{height: 200px;}
 
         @media screen and (max-width:576px){
             .headerWrap .nav-item,.headerWrap .nav-item:hover{border-bottom: 4px solid transparent;}
@@ -71,7 +85,78 @@
         </div>
     </div>
 
+    <div class="content">
+        <div class="container py-5 px-5 px-md-0">
+            <div class="row">
+                <div class="col-md-6 order-md-1 order-2">
+                    <img src="assets/sobre.svg" alt="sobre" class="img-fluid">
+                </div>
+                <div class="col-md-6 order-md-2 order-1 mb-5 mb-md-0 align-self-center">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, facere!</h4>
+                    <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia pariatur hic, provident est reprehenderit dolores modi iste illum eaque a!</p>
+                    <a href="#!" class="btn button-primary text-white d-block d-md-inline px-5">ENTER CONTACT</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="service">
+        <div class="container py-5 px-5">
+            <h2 class="text-center mb-5">GALLERY</h2>
+            <div class="row">
+                <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="card">
+                        <img src="assets/destaque1.svg" alt="destaque1" class="img-fluid m-3">
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum.</h4>
+                            <p class="card-txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, ducimus?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="card">
+                        <img src="assets/destaque2.svg" alt="destaque2" class="img-fluid m-3">
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum.</h4>
+                            <p class="card-txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, ducimus?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="card">
+                        <img src="assets/destaque3.svg" alt="destaque3" class="img-fluid m-3">
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum.</h4>
+                            <p class="card-txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, ducimus?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="card">
+                        <img src="assets/destaque4.svg" alt="destaque4" class="img-fluid m-3">
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum.</h4>
+                            <p class="card-txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, ducimus?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+    <script>
+        $(window).scroll(function(){
+            let scrollY = $(window).scrollTop();
+            if(scrollY > 200){
+                $(".headerWrap").addClass("fixed-top")
+            }else{
+                $(".headerWrap").removeClass("fixed-top")
+            }
+        });
+    </script>
   </body>
 </html>
